cloudexpo/src/objects/Intranet_Content_Version__c.object
<CustomObject>
    <fields>
        <fullName>Button_Label__c</fullName>
        <label>Button Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intranet_Content__c</fullName>
        <label>Intranet Content</label>
        <referenceTo>Intranet_Content__c</referenceTo>
        <relationshipLabel>Intranet Content Versions</relationshipLabel>
        <relationshipName>Intranet_Content_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese Mandarin (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French (French &amp; Canadian French)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Portuguese/Brazilian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Video_Caption__c</fullName>
        <label>Video Caption</label>
        <type>TextArea</type>
    </fields>
    <label>Intranet Content Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Intranet Content Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intranet Content Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>